--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <input type="text" id="id" placeholder="Student ID * (e.g. 12345)" autocomplete="off">
   <select id="teacher"><option value="">Choose Your Teacher</option></select>
 
-  <div class="secret">
-    Secret word: "<span id="word"></span>"<br>
-    <input type="text" id="check" placeholder="type the word above" autocomplete="off">
-  </div>
+//  <div class="secret">
+//    Secret word: "<span id="word"></span>"<br>
+//    <input type="text" id="check" placeholder="type the word above" autocomplete="off">
+//  </div>
 
   <div id="locked-msg" class="locked hidden">
     Device locked to Student ID: <strong id="locked-id"></strong>
@@ -206,4 +206,5 @@ window.emailWork = async function() {
 </script>
 </body>
 </html>
+
 
