--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BCATS Materials – Secure Submission</title>
+  <title>BCATS Materials – Final Version</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {font-family:Arial,sans-serif;max-width:900px;margin:40px auto;padding:20px;background:#f9f9f9;color:#333;line-height:1.6;}
@@ -15,8 +15,11 @@
       autocomplete:off !important; autocorrect:off; autocapitalize:off; spellcheck:false;}
     .q{background:white;padding:18px;margin:18px 0;border-radius:12px;box-shadow:0 3px 12px rgba(0,0,0,0.1);}
     .hidden{display:none;}
-    .secret{background:#fff3cd;padding:18px;border-left:6px solid #f39c12;text-align:center;font-weight:bold;font-size:18px;}
     .locked{background:#e8f5e8;padding:15px;border-left:6px solid #27ae60;text-align:center;font-weight:bold;}
+    .feedback{margin-top:10px;padding:12px;border-radius:8px;font-size:15px;}
+    .wrong{background:#ffebee;border-left:5px solid #e74c3c;}
+    .partial{background:#fff3cd;border-left:5px solid #f39c12;}
+    .correct{background:#e8f5e8;border-left:5px solid #27ae60;}
   </style>
 </head>
 <body>
@@ -24,14 +27,9 @@
 <h1>BCATS Materials Self-Reflection</h1>
 
 <div id="form">
-  <input type="text" id="name" placeholder="Full Name *" autocomplete="on">
-  <input type="text" id="id" placeholder="Student ID * (e.g. 12345)" autocomplete="on">
-  <select id="teacher"><option value="">Choose Your Teacher</option></select>
-
- <div class="secret">
-    Secret word: "<span id="word"></span>"<br>
-    <input type="text" id="check" placeholder="type the word above" autocomplete="off">
-  </div>
+  <input type="text" id="name" placeholder="Full Name *" required>
+  <input type="text" id="id" placeholder="Student ID * (e.g. 12345)" required>
+  <select id="teacher"><option value="">Choose Teacher</option></select>
 
   <div id="locked-msg" class="locked hidden">
     Device locked to Student ID: <strong id="locked-id"></strong>
@@ -41,7 +39,7 @@
 
   <button class="btn purple" onclick="submitWork()">Submit & Auto-Grade</button>
   <button class="btn green" onclick="emailWork()">Send via Outlook (PDF attached)</button>
-  <button class="btn red" onclick="if(confirm('Clear ALL data on this device?')) localStorage.clear(); location.reload();">
+  <button class="btn red" onclick="if(confirm('Clear ALL data?')) localStorage.clear(); location.reload();">
     Teacher: Clear All Data
   </button>
 </div>
@@ -49,6 +47,7 @@
 <div id="result" class="hidden">
   <h2>All Done <span id="student"></span>!</h2>
   <h1 style="color:#27ae60;text-align:center;" id="grade">0/37</h1>
+  <p style="text-align:center;font-size:180%;">Teacher: <span id="teacher-name"></span></p>
   <div id="answers"></div>
   <button class="btn orange" onclick="back()">Back to Form</button>
 </div>
@@ -58,9 +57,6 @@
 const STORAGE_KEY = "BCATS_LOCKED_ID";
 let lockedId = localStorage.getItem(STORAGE_KEY);
 
-const secret = SECRET_WORDS[Math.floor(Math.random() * SECRET_WORDS.length)];
-document.getElementById("word").textContent = secret;
-  
 if (lockedId) {
   document.getElementById("locked-msg").classList.remove("hidden");
   document.getElementById("locked-id").textContent = lockedId;
@@ -68,6 +64,7 @@ if (lockedId) {
   document.getElementById("id").readOnly = true;
 }
 
+// Teachers
 TEACHERS.forEach(t => {
   const o = document.createElement("option");
   o.value = t.email; o.textContent = t.name;
@@ -80,22 +77,48 @@ task.questions.forEach((q,i) => {
   div.className = "q";
   div.innerHTML = `
     <strong>Q${i+1} (${q.maxPoints} pts)</strong><br>${q.text}<br>
-    ${q.type==="long" 
-      ? `<textarea rows="5" id="a${q.id}" autocomplete="off" autocorrect="off" spellcheck="false"></textarea>`
-      : `<input type="text" id="a${q.id}" autocomplete="off" autocorrect="off" spellcheck="false">`}
+    ${q.type==="long"
+      ? `<textarea rows="5" id="a${q.id}"></textarea>`
+      : `<input type="text" id="a${q.id}">`}
   `;
   document.getElementById("questions").appendChild(div);
 });
 
 function getAnswer(id) { return document.getElementById("a"+id)?.value.trim() || ""; }
 
+// Auto-grader with detailed feedback
 function gradeIt() {
-  let score = 0;
-  task.questions.forEach(q => {
+  let total = 0;
+  const feedback = [];
+
+  task.questions.forEach((q,i) => {
     const ans = getAnswer(q.id);
-    if (q.rubric) q.rubric.forEach(r => { if (r.check.test(ans)) score += r.points; });
+    let earned = 0;
+    let hints = [];
+
+    if (q.rubric) {
+      q.rubric.forEach(rule => {
+        if (rule.check.test(ans)) {
+          earned += rule.points;
+        } else if (rule.hint) {
+          hints.push(rule.hint);
+        }
+      });
+    }
+
+    total += earned;
+
+    const fbDiv = document.createElement("div");
+    fbDiv.className = "feedback " + (earned === q.maxPoints ? "correct" : earned > 0 ? "partial" : "wrong");
+    fbDiv.innerHTML = `
+      <strong>Q${i+1}: ${earned}/${q.maxPoints} marks</strong><br>
+      Your answer: <em>${ans||"(blank)"}</em><br>
+      ${earned < q.maxPoints ? "<strong>Tip:</strong> " + (hints.length ? hints.join(" • ") : "Check spelling or include key words") : "Perfect!"}
+    `;
+    feedback.push(fbDiv);
   });
-  return score;
+
+  return { total, feedback };
 }
 
 let finalData = null;
@@ -103,12 +126,9 @@ let finalData = null;
 window.submitWork = function() {
   const name = document.getElementById("name").value.trim();
   const id = document.getElementById("id").value.trim();
-  const check = document.getElementById("check").value.trim();
+  if (!name || !id || !document.getElementById("teacher").value) return alert("Fill all fields");
 
-  if (!name || !id || !document.getElementById("teacher").value) return alert("Fill Name, ID and Teacher");
-  if (check !== secret) return alert("Wrong secret word! It is: " + secret);
-  if (lockedId && lockedId !== id) return alert("This device is locked to Student ID: " + lockedId);
-
+  if (lockedId && lockedId !== id) return alert("Device locked to ID: " + lockedId);
   if (!lockedId) {
     localStorage.setItem(STORAGE_KEY, id);
     lockedId = id;
@@ -117,25 +137,24 @@ window.submitWork = function() {
     document.getElementById("id").readOnly = true;
   }
 
-  const points = gradeIt();
-  const pct = Math.round((points / 37) * 100);
+  const { total, feedback } = gradeIt();
+  const pct = Math.round((total / 37) * 100);
 
-  finalData = { name, id,
+  finalData = {
+    name, id,
     teacherName: document.getElementById("teacher").selectedOptions[0].textContent,
     teacherEmail: document.getElementById("teacher").value,
-    points, pct,
+    points: total, pct,
     submittedAt: new Date().toLocaleString()
   };
 
   document.getElementById("student").textContent = name;
-  document.getElementById("grade").innerHTML = points + "/37<br><small>(" + pct + "%)</small>";
-  document.getElementById("answers").innerHTML = "";
-  task.questions.forEach((q,i) => {
-    const div = document.createElement("div");
-    div.className = "q";
-    div.innerHTML = `<strong>Q${i+1}:</strong> ${q.text}<br><em>${getAnswer(q.id)||"(no answer)"}</em>`;
-    document.getElementById("answers").appendChild(div);
-  });
+  document.getElementById("teacher-name").textContent = finalData.teacherName;
+  document.getElementById("grade").innerHTML = total + "/37<br><small>(" + pct + "%)</small>";
+
+  const ansDiv = document.getElementById("answers");
+  ansDiv.innerHTML = "<h3>Your Answers & Feedback</h3>";
+  feedback.forEach(f => ansDiv.appendChild(f));
 
   document.getElementById("form").classList.add("hidden");
   document.getElementById("result").classList.remove("hidden");
@@ -147,21 +166,22 @@ window.back = () => {
 };
 
 window.emailWork = async function() {
-  if (!finalData) return alert("Click Submit & Auto-Grade first!");
+  if (!finalData) return alert("Submit first!");
 
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
-  let y = 25;
+  let y = 20;
 
   doc.setFontSize(24);
-  doc.text("BCATS Materials Self-Reflection", 105, y, {align:"center"}); y += 18;
+  doc.text("BCATS Materials Self-Reflection", 105, y, {align:"center"}); y += 15;
   doc.setFontSize(28);
-  doc.text(finalData.name, 105, y, {align:"center"}); y += 18;
-  doc.setFontSize(24);
-  doc.text("ID: " + finalData.id, 105, y, {align:"center"}); y += 18;
-  doc.setFontSize(18);
-  doc.text("Submitted: " + finalData.submittedAt, 105, y, {align:"center"}); y += 25;
+  doc.text(finalData.name, 105, y, {align:"center"}); y += 15;
   doc.setFontSize(22);
+  doc.text("ID: " + finalData.id, 105, y, {align:"center"}); y += 12;
+  doc.setFontSize(18);
+  doc.text("Teacher: " + finalData.teacherName, 105, y, {align:"center"}); y += 12;
+  doc.text("Submitted: " + finalData.submittedAt, 105, y, {align:"center"}); y += 20;
+  doc.setFontSize(24);
   doc.text("GRADE: " + finalData.points + "/37 (" + finalData.pct + "%)", 105, y, {align:"center"}); y += 30;
 
   task.questions.forEach((q,i) => {
@@ -172,33 +192,28 @@ window.emailWork = async function() {
     doc.setFont("helvetica","normal");
     const lines = doc.splitTextToSize(getAnswer(q.id) || "(no answer)", 180);
     lines.forEach(l => { doc.text(l, 20, y); y += 7; });
-    y += 12;
+    y += 10;
   });
 
-  const pdfBlob = doc.output('blob');
-  const file = new File([pdfBlob], finalData.id + "_" + finalData.name.replace(/ /g,"") + "_BCATS.pdf", {type: "application/pdf"});
+  const blob = doc.output('blob');
+  const file = new File([blob], finalData.id + "_" + finalData.name.replace(/ /g,"") + "_BCATS.pdf", {type:"application/pdf"});
 
-  if (navigator.canShare && navigator.canShare({files: [file]})) {
-    try { await navigator.share({files: [file], title: finalData.name + " – BCATS Materials", text: "Grade: " + finalData.points + "/37"}); }
-    catch(e) { fallbackOutlook(file); }
-  } else {
-    fallbackOutlook(file);
-  }
+  if (navigator.canShare && navigator.canShare({files:[file]})) {
+    try { await navigator.share({files:[file], title: finalData.name + " – BCATS"}); }
+    catch { fallbackOutlook(file); }
+  } else fallbackOutlook(file);
 
   function fallbackOutlook(file) {
     const reader = new FileReader();
-    reader.onload = function() {
-      const base64 = reader.result.split(',')[1];
-      const body = encodeURIComponent(
-        "Kia ora " + finalData.teacherName + ",\n\nPlease find my work attached.\n\n" +
-        "Student: " + finalData.name + " (ID: " + finalData.id + ")\n" +
-        "Grade: " + finalData.points + "/37 (" + finalData.pct + "%)\n" +
-        "Submitted: " + finalData.submittedAt + "\n\nNgā mihi,\n" + finalData.name
-      );
-      window.open("https://outlook.office.com/mail/deeplink/compose?subject=" +
+    reader.onload = () => {
+      const url = "https://outlook.office.com/mail/deeplink/compose?subject=" +
         encodeURIComponent(finalData.name + " – BCATS Materials") +
-        "&body=" + body +
-        "&attach=" + encodeURIComponent("data:application/pdf;base64," + base64), "_blank");
+        "&body=" + encodeURIComponent(
+          "Kia ora " + finalData.teacherName + ",\n\nAttached is my completed work.\n\n" +
+          "Grade: " + finalData.points + "/37 (" + finalData.pct + "%)\n\nNgā mihi,\n" + finalData.name
+        ) +
+        "&attach=" + encodeURIComponent(reader.result);
+      window.open(url, "_blank");
     };
     reader.readAsDataURL(file);
   }
@@ -206,7 +221,3 @@ window.emailWork = async function() {
 </script>
 </body>
 </html>
-
-
-
-
